--- a/ProductivityTools.BankAccounts.Contract/ProductivityTools.BankAccounts.Contract.csproj
+++ b/ProductivityTools.BankAccounts.Contract/ProductivityTools.BankAccounts.Contract.csproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>netstandard2.0</TargetFramework>
     <Version>0.0.6</Version>
     <Authors>Pawel Wujczyk</Authors>
     <Company>
